<resources>
    <string name="app_name">Ječňák</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Přehled</string>
    <string name="title_grades">Známky</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="user_name">Uživatelské jméno</string>
    <string name="pass">Heslo</string>
    <string name="log_in">Přihlásit se</string>
    <string name="github_link"><a href="https://github.com/Dotteex/jecnak">Github</a></string>
    <string name="prof">Profil</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_out">Odhlásit se</string>
    <string name="parents_messages">Sdělení rodičům</string>
    <string name="absence">Omluvný list</string>
    <string name="record">Příchody a odchody</string>
    <string name="subj">Předměty</string>
    <string name="histor">Historie</string>
    <string name="canteen">Jídelna</string>
    <string name="schedule">Rozvrh</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="seti">Nastavení</string>
    <string name="about">O aplikaci</string>
    <string name="attendance">Docházka</string>
    <string name="title_notification_enabled">Povolit oznámení</string>
    <string name="summary_notification_enabled">(1 kontrola = 1 přihlášení na školní web)</string>
    <string name="title_sync_interval">Interval kontroly</string>
    <string name="title_sync_only_on_wifi">Kontrola jen na WI-FI</string>
    <string name="summary_sync_only_on_wifi">Deaktivace povede k vyšší spotřebě mobilních dat. Umožní se však pravidelná kontrola.</string>
    <string name="title_type_of_notifications">Druhy oznámení</string>
    <string name="summary_notify_new_grade">Oznámení o nové známce</string>
    <string name="summary_notify_new_news">Oznámení při nové aktualitě</string>
    <string name="summary_attendance">Oznámení zda jsem přišel/a nebo nepřišel/a včas</string>
    <string name="title_attendance">Pozdní příchod?</string>
    <string name="title_new_grade">Nová známky</string>
    <string name="summary_dnd">Pokud se nacházíš ve škole, tak bude v průběhu vyučovací hodiny zapnutý režim nerušit (DND).</string>
    <string name="title_dnd">Chytrý režim nerušit (DND)</string>
    <string name="title_other">Ostatní</string>
    <string name="new_grade">Nová známka</string>
    <string name="new_news">Novinky</string>
    <string name="new_parents_news">Sdělení rodičům</string>
    <string name="without_description">(bez popisu)</string>
</resources>