<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory app:title="Oznámení">
        <SwitchPreference
            app:defaultValue="false"
            app:key="notification_enabled"
            app:title="@string/title_notification_enabled"
            app:summary="@string/summary_notification_enabled"/>
        <ListPreference
            app:defaultValue="3_hours"
            app:dependency="notification_enabled"
            app:entries="@array/sync_entries"
            app:entryValues="@array/sync_values"
            app:key="notification_interval"
            app:useSimpleSummaryProvider="true"
            app:title="@string/title_sync_interval" />
        <SwitchPreference
            app:defaultValue="true"
            app:dependency="notification_enabled"
            app:key="notification_cellular_enabled"
            app:title="@string/title_sync_only_on_wifi"
            app:summary="@string/summary_sync_only_on_wifi"/>

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/title_type_of_notifications"
        app:dependency="notification_enabled"
        app:allowDividerAbove="false"
        >
        <CheckBoxPreference
            app:defaultValue="true"
            app:key="notification_type_new_message"
            app:summary="@string/summary_notify_new_grade"
            app:title="@string/title_new_grade" />
        <CheckBoxPreference
            app:defaultValue="true"
            app:key="notification_type_new_message"
            app:summary="@string/summary_notify_new_news"
            app:title="Nové aktuality" />
        <CheckBoxPreference
            app:defaultValue="true"
            app:key="notification_type_new_message"
            app:summary="@string/summary_attendance"
            app:title="@string/title_attendance" />
    </PreferenceCategory>
    <PreferenceCategory app:title="@string/title_other">
        <SwitchPreference
            app:defaultValue="false"
            app:key="notification_enabled"
            app:title="@string/title_dnd"
            app:summary="@string/summary_dnd"/>
    </PreferenceCategory>
</PreferenceScreen>