<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_schedule"
        android:icon="@drawable/ic_baseline_calendar_today_24"
        android:title="@string/schedule"/>

    <item
        android:id="@+id/navigation_grades"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_grades" />

    <item
        android:id="@+id/navigation_canteen"
        android:icon="@drawable/ic_jidelna"
        android:title="@string/canteen" />

    <item
        android:id="@+id/navigation_attendance"
        android:icon="@drawable/ic_checklist"
        android:title="@string/attendance"/>

</menu>